<resources>
    <string name="app_name">Combat Calculator</string>

    <!--Label-->
    <string name="full_attack_label">Full attack:\u0020</string>
    <string name="character_level_label">Character level:\u0020</string>
    <string name="bab_label">BAB:\u0020</string>
    <string name="strength_label">Strength:\u0020</string>
    <string name="strength_modifier_label">Strength modifier:\u0020</string>
    <string name="dexterity_label">Dexterity:\u0020</string>
    <string name="dexterity_modifier_label">Dexterity modifier:\u0020</string>
    <string name="weapon_enchant_label">Weapon enchant:\u0020</string>
    <string name="misc_to_hit_label">Misc to hit:\u0020</string>
    <string name="misc_damage_label">Misc damage:\u0020</string>
    <string name="power_attack_label">Power Attack:</string>
    <string name="flanking_label">Flanking:</string>
    <string name="outflank_label">Outflank:</string>
    <string name="bane_label">Bane:</string>
    <string name="greater_bane_label">Greater Bane:</string>
    <string name="divine_favor_label">Divine Favor:</string>
    <string name="fates_favored_label">Fates Favored</string>
    <string name="prayer_label">Prayer:</string>
    <string name="divine_power_label">Divine Power:</string>
    <string name="holy_enchant_label">Holy Enchant:</string>
    <string name="precise_strike_label">Precise Strike:</string>
    <string name="planar_focus_fire_label">Planar Focus - fire:</string>
    <string name="enlarge_person_label">Enlarge Person:</string>
    <string name="monstrous_physique_gargoyle">Monstrous physique - Gargoyle:</string>


    <!--Dialog-->
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="character_level_dialog_title">Enter your character level</string>
    <string name="bab_dialog_title">Enter your base attack bonus</string>
    <string name="strength_dialog_title">Enter your strength score</string>
    <string name="dexterity_dialog_title">Enter your dexterity score</string>
    <string name="weapon_enchant_dialog_title">Enter the enchantment bonus of your weapon</string>
    <string name="misc_to_hit_dialog_title">Enter any other to hit modifier</string>
    <string name="misc_damage_dialog_title">Enter any other damage modifier</string>

    <!--Error-->
    <string name="error_stat_not_found">Stat not found</string>
    <string name="error_no_such_value">The following value was not found:\u0020</string>

</resources>
